remove blog button

--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@ body {
 <body>
 <div align="center">
   <p><img src="img/index.gif" width="423" height="506"></p>
-  <p><a href="http://blog.joannetse.com"><img src="img/mydiary.gif" width="208" height="70" border="0"></a></p>
+  <!-- <p><a href="http://blog.joannetse.com"><img src="img/mydiary.gif" width="208" height="70" border="0"></a></p> -->
   <!--<p><a href="jap/add">Add a japanese word</a></p>-->
   <!--<p><a href="jap/test">Japanese Test</a></p>-->
 </div>
